--- a/o3o/notify.xaml
+++ b/o3o/notify.xaml
@@ -2,12 +2,21 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:aero="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
-        Title="o3o" Height="122" Width="319" WindowStyle="None" ShowInTaskbar="False" ResizeMode="NoResize" Background="Transparent" AllowsTransparency="True">
+        Title="o3o" Height="122" Width="319" WindowStyle="ToolWindow" ShowInTaskbar="False" ResizeMode="CanResize" Background="White" ShowActivated="False">
     <Grid>
-        <aero:SystemDropShadowChrome Margin="5" CornerRadius="10" Color="#7F000000" Grid.Column="0" OverridesDefaultStyle="False">
-        <Rectangle Stroke="#FF222222" RadiusX="5" RadiusY ="5" Name="RectangleSidesCurved" Fill="#FF222222" Margin="0,-10,0,0" />
-        </aero:SystemDropShadowChrome>
-        <Label Content="" Height="41" HorizontalAlignment="Left" Name="text" VerticalAlignment="Top" Width="273" Margin="12,24,0,0" Foreground="#007998" />
-        <Label Content="o3o" Height="18" HorizontalAlignment="Left" Name="label1" VerticalAlignment="Top" Width="42" Padding="5,0,0,0" Foreground="#007998" FontStyle="Normal" FontWeight="Bold" Margin="12,5,0,0" />
+        <Label Content="" Height="63" HorizontalAlignment="Left" Name="text" VerticalAlignment="Top" Width="283" Margin="7,8,0,0" Foreground="Black" />
+        <Rectangle Height="2" HorizontalAlignment="Left" Margin="12,0
+                   ,0,0" Name="rectangle1" Stroke="#00000000" VerticalAlignment="Top" Width="273">
+            <Rectangle.Fill>
+                <LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
+                    <GradientStop Color="#00000000" Offset="0" />
+                    <GradientStop Color="Black" Offset="0.5" />
+                    <GradientStop Color="#00000000" Offset="1" />
+                   
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+        <!--<Label Content="X" Height="20" HorizontalAlignment="Right" Margin="0,3,12,0" Name="label2" VerticalAlignment="Top" Foreground="#007998" Padding="5,0,5,0" />-->
+        
     </Grid>
 </Window>
