--- a/o3o/TweetElement.xaml
+++ b/o3o/TweetElement.xaml
@@ -4,16 +4,48 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="82" d:DesignWidth="300">
-    <Border BorderThickness="2,2,2,2"   
-        CornerRadius="5,5,5,5"   
-        Background="#FF626262"   
-        BorderBrush="#FFFFAC00"   
-        Grid.ColumnSpan="2">
-        <!-- WILL CHANGE BORDER LATER-->
-        <Grid>
-            <Image Height="58" HorizontalAlignment="Left" Margin="12,12,0,0" Name="image1" Stretch="Fill" VerticalAlignment="Top" Width="58" />
-            <TextBlock Name="TweetBlock" Height="58" HorizontalAlignment="Left" Margin="76,12,0,0" Text="TextBlock" VerticalAlignment="Top" Width="212" />
+             d:DesignHeight="100" d:DesignWidth="265" Loaded="UserControl_Loaded">
+    <UserControl.Resources>
+        <Style TargetType="TextBlock" x:Key="glassText">
+            <Setter Property="Foreground" Value="Black" />
+            <Style.Triggers>
+                <Trigger Property="Foreground" Value="Black">
+                    <Setter Property="Effect">
+                        <Setter.Value>
+                            <DropShadowEffect Color="White" BlurRadius="10" RenderingBias="Performance" ShadowDepth="0" Direction="0" />
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+        <Style TargetType="TextBlock" x:Key="glassLink" BasedOn="{StaticResource glassText}">
+            <Setter Property="Foreground" Value="#FF0066CC" />
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Cursor" Value="Hand" />
+                    <Setter Property="TextDecorations" Value="Underline" />
+                </Trigger>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Foreground" Value="{x:Static SystemColors.GrayTextBrush}" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Resources>
+    
+    <Grid Width="265" Height="100">
+            <!--<Rectangle Height="72" HorizontalAlignment="Left" Margin="6,6,0,0" Name="rectangle1" Stroke="Black" VerticalAlignment="Top" Width="235" Fill="Black" />-->
+        
+            <Polygon
+                Points="6,6 260,6 260,72 25, 72 6,90">
+                <Polygon.Fill>
+                    <SolidColorBrush Color="Black" Opacity="0.4"/>
+                </Polygon.Fill>
+            </Polygon>
+            
+            <!--<Image Height="58" HorizontalAlignment="Left" Margin="12,12,0,0" Name="image1" Stretch="Fill" VerticalAlignment="Top" Width="58" />-->
+            <TextBlock Name="TweetBlock" Height="58" HorizontalAlignment="Left" Margin="62,11,0,0" Text="TextBlock" VerticalAlignment="Top" Width="196" Foreground="White" Background="Transparent"></TextBlock>
+        <TextBlock Text="Label" Height="23" HorizontalAlignment="Left" Margin="29,71,0,0" Name="label1" VerticalAlignment="Top" Foreground="Black" Padding="0" Width="193" Style="{StaticResource glassText}"/>
+            
         </Grid>
-    </Border>
+
 </UserControl>
