--- a/o3o/TweetElement.xaml
+++ b/o3o/TweetElement.xaml
@@ -43,9 +43,10 @@
             </Polygon>
             
             <!--<Image Height="58" HorizontalAlignment="Left" Margin="12,12,0,0" Name="image1" Stretch="Fill" VerticalAlignment="Top" Width="58" />-->
-            <TextBlock Name="TweetBlock" Height="58" HorizontalAlignment="Left" Margin="62,11,0,0" Text="TextBlock" VerticalAlignment="Top" Width="196" Foreground="White" Background="Transparent"></TextBlock>
-        <TextBlock Text="Label" Height="23" HorizontalAlignment="Left" Margin="29,71,0,0" Name="label1" VerticalAlignment="Top" Foreground="Black" Padding="0" Width="193" Style="{StaticResource glassText}"/>
-            
-        </Grid>
+            <TextBlock Name="TweetBlock" Height="58" HorizontalAlignment="Left" Margin="62,11,0,0" Text="TextBlock" VerticalAlignment="Top" Width="196" Foreground="White" Background="Transparent" TextWrapping="Wrap"></TextBlock>
+        <TextBlock MouseDown="label1_MouseDown" MouseEnter="label1_MouseEnter" MouseLeave="label1_MouseLeave" Text="Label" Height="23" HorizontalAlignment="Left" Margin="29,71,0,0" Name="label1" VerticalAlignment="Top" Foreground="Black" Padding="0" Width="100" />
+        <TextBlock MouseDown="datelabel_MouseDown" MouseEnter="datelabel_MouseEnter" MouseLeave="datelabel_MouseLeave" Text="Label" Height="23" HorizontalAlignment="Left" Margin="139,71,0,0" Name="datelabel" VerticalAlignment="Top" Foreground="#96000000" Padding="0" Width="119" />
+        <Image Height="48" HorizontalAlignment="Left" Margin="0,11,0,0" Name="tweetImg" Stretch="Fill" VerticalAlignment="Top" Width="48" />
+    </Grid>
 
 </UserControl>
