--- a/o3o/MainWindow.xaml
+++ b/o3o/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:aero="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
         xmlns:l="clr-namespace:o3o"
         xmlns:Microsoft_Windows_Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero" 
+        xmlns:cp="clr-namespace:DropDownCustomColorPicker;assembly=CustomColorPicker"
         Title="o3o" Height="700" Width="340" Background="White" WindowStyle="SingleBorderWindow" ResizeMode="CanResizeWithGrip" MinHeight="230" MinWidth="340" Margin="290" Icon="/o3o;component/Images/new%20o3o%20icon%20allsize1.ico" MaxWidth="340">
     
         <Window.Resources>
@@ -188,6 +189,7 @@
                                     </Setter.Value>
                                 </Setter>
                             </Trigger>
+                            
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
@@ -379,12 +381,14 @@
             </Style.Triggers>
         </Style>
 
-
     </Window.Resources>
     
     <Grid>
-        <!--<Button Content="testBtn" Height="23" HorizontalAlignment="Left" Margin="12,30,0,0" Name="testbutton" VerticalAlignment="Top" Width="75" Click="testbutton_Click" Template="{DynamicResource GlassButton}" Foreground="White" />-->
-        
+       
+        <!--<Image MouseEnter="reload_MouseEnter"  MouseLeave="reload_MouseLeave" MouseDown="reload_MouseDown" Name="reload" Height="16" Width="16" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,3,2,0" Focusable="False" Source="/o3o;component/Images/Reload_normal.png"/>-->
+        <Image MouseEnter="btn_right_MouseEnter" MouseLeave="btn_right_MouseLeave" MouseDown="btn_right_MouseDown"  Name="btn_right" Height="20" Width="20" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,0,0" Focusable="False" Source="/o3o;component/Images/rightarrow.png"/>
+        <Image MouseEnter="btn_Left_MouseEnter" MouseLeave="btn_Left_MouseLeave" MouseDown="btn_Left_MouseDown" Name="btn_Left" Height="20" Width="20" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,20,0" Source="/o3o;component/Images/leftarrow.png" />
+       
         <TabControl HorizontalAlignment="Stretch" Name="tabControl1" VerticalAlignment="Stretch" Height="{Binding ElementName=Scroller, Path=ViewportHeight}" Width="{Binding ElementName=Scroller, Path=ViewportWidth}" Background="#00000000" Padding="0" BorderBrush="#00000000">
             <TabItem Header="Home" Name="HomeTab" BorderBrush="#00000000" Padding="6,0">
                 <Grid Height="Auto">
@@ -406,6 +410,27 @@
                     </ListBox>
                     </Grid>
             </TabItem>
+            <TabItem Header="Messages" Name="MessagesTab" BorderBrush="#00000000" Padding="6,0">
+                <Grid>
+                    <ListBox ScrollViewer.CanContentScroll="False"  Margin="0,0,0,-1" Name="TweetMessages" VerticalAlignment="Stretch" HorizontalContentAlignment="Left" Width="{Binding ElementName=Scroller, Path=ViewportWidth}" Background="#00000000" BorderBrush="#00000000" BorderThickness="0" SelectionMode="Extended" 
+                             ScrollViewer.HorizontalScrollBarVisibility="Disabled" Style="{DynamicResource ListBoxStyle1}" Height="Auto">
+                    </ListBox>
+                </Grid>
+            </TabItem>
+            <TabItem Name="SystemTab" BorderBrush="#00000000" Header="Settings">
+                <!--<TabItem.Header>
+                    <Image Height="12" Name="img" Source="/o3o;component/Images/gear_icon.png" />
+                </TabItem.Header>-->
+                <Grid >
+                    <Button HorizontalAlignment="Left" Width="90" Height="25" Content="About o3o" Margin="6,0,0,24" VerticalAlignment="Bottom" Click="Button_Click" />
+                    <cp:CustomColorPicker SelectedColorChanged="colorpicker_SelectedColorChanged" Name="colorpicker" Width="40" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="193,45,0,0"></cp:CustomColorPicker>
+                    <Label Content="color for links(requires reload)" Height="18" HorizontalAlignment="Left" Margin="-1,45,0,0" Name="label1" VerticalAlignment="Top" Padding="0" />
+                    <Label Content="use different color for links" Height="18" HorizontalAlignment="Left" Margin="0,14,0,0" Name="label2" Padding="0" VerticalAlignment="Top" />
+                    <CheckBox Checked="checkBox1_Checked" Unchecked="checkBox1_Unchecked" Content="" Height="16" HorizontalAlignment="Left" Margin="193,14,0,0" Name="checkBox1" VerticalAlignment="Top" />
+                    <Button Content="Reload tweets" Height="23" HorizontalAlignment="Left" Margin="193,94,0,0" Name="button1" VerticalAlignment="Top" Width="90" Click="button1_Click" />
+                </Grid>
+            </TabItem>
         </TabControl>
+        
     </Grid>
 </Window>
