--- a/o3o/TweetElement.xaml
+++ b/o3o/TweetElement.xaml
@@ -50,7 +50,7 @@
         </TextBlock>
         <TextBlock MouseDown="label1_MouseDown" MouseEnter="label1_MouseEnter" MouseLeave="label1_MouseLeave" Text="Label" Height="18" HorizontalAlignment="Left" Margin="29,76,0,0" Name="label1" VerticalAlignment="Top" Foreground="Black" Padding="0" Width="100" />
         <TextBlock MouseDown="datelabel_MouseDown" MouseEnter="datelabel_MouseEnter" MouseLeave="datelabel_MouseLeave" Text="Label" Height="18" HorizontalAlignment="Left" Margin="175,76,0,0" Name="datelabel" VerticalAlignment="Top" Foreground="#96000000" Padding="0" Width="67" />
-        <Border >
+        <Border Name="imageborder" CornerRadius="5">
             <Image Height="48" HorizontalAlignment="Left" Margin="0,11,0,0" Name="tweetImg" Stretch="Fill" VerticalAlignment="Top" Width="48" />
             <Border.Effect>
                 <DropShadowEffect Color="Black" Direction="-45"
